fixing spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ p {
     color: #8f8f8f;
 }
 
+.transparent {
+    color: transparent;
+}
+
 .container-fluid {
     padding: 3% 15% 7%;
 
